Fix spacing.

--- a/web/assets/spelthorne/css.css
+++ b/web/assets/spelthorne/css.css
@@ -20,7 +20,8 @@ small {
 
 div#petition_actions {
     border: none;
-    font-size: 100%;
+    font-size: 130%;
+    line-height: 1.2;
 }
 
 div#most_recent {
